# speaker

./: CMakeLists.txt
lib/: opus.lib  portaudiolib
lib/wx/: wxbase31u.lib  wxbase31u_net.lib  wxbase31u_xml.lib  wxbase31ud.lib  wxbase31ud_net.lib  wxbase31ud_xml.lib  wxexpat.lib  wxexpatd.lib  wxjpeg.lib  wxjpegd.lib  wxmsw31u_adv.lib  wxmsw31u_aui.lib  wxmsw31u_gl.lib  wxmsw31u_html.lib  wxmsw31u_media.lib  wxmsw31u_propgrid.lib  wxmsw31u_qa.lib  wxmsw31u_ribbon.lib  wxmsw31u_richtext.lib  wxmsw31u_stc.lib  wxmsw31u_webview.lib  wxmsw31u_xrc.lib  wxmsw31ud_adv.lib  wxmsw31ud_aui.lib  wxmsw31ud_gl.lib  wxmsw31ud_html.lib  wxmsw31ud_media.lib  wxmsw31ud_propgrid.lib  wxmsw31ud_qa.lib  wxmsw31ud_ribbon.lib  wxmsw31ud_richtext.lib  wxmsw31ud_stc.lib  wxmsw31ud_webview.lib  wxmsw31ud_xrc.lib  wxpng.lib  wxpngd.lib  wxregexu.lib  wxregexud.lib  wxtiff.lib  wxtiffd.lib  (+2 more)
lib/wx/mswu/: build.cfg
lib/wx/mswud/: build.cfg
src/: pcm.c  pcm.h  snd.c  snd.h
